# fairseq-signals

./: .gitignore  README.md  pyproject.toml  test.py
src/fairseq_signals_backbone/: __init__.py
src/fairseq_signals_backbone/data/: data_utils.py
src/fairseq_signals_backbone/dataclass/: configs.py  initialize.py  utils.py
src/fairseq_signals_backbone/distributed/: utils.py
src/fairseq_signals_backbone/models/: __init__.py  ecg_transformer.py  finetuning_model.py  model.py  pretraining_model.py  transformer.py
src/fairseq_signals_backbone/models/wav2vec2/: wav2vec2.py  wav2vec2_cmsc.py
src/fairseq_signals_backbone/modules/: conv_feature_extraction.py  conv_positional_encoding.py  gather_layer.py  multi_head_attention.py  transformer_encoder.py  transformer_encoder_layer.py
src/fairseq_signals_backbone/utils/: checkpoint_utils.py  options.py  registry.py  splits.py  store.py  utils.py
