[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fairseq_signals_backbone" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.0.1" # REQUIRED, although can be dynamic
description = "HuggingFace Fairseq-signals"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["ECG"]
authors = [{ name = "Fuying Wang", email = "fuyingw@connect.hku.hk" }]
dependencies = [
    "torch"
]

[project.urls]
Source = "https://github.com/fuying-wang/fairseq-signals/"


[tool.setuptools.packages.find]
where = ["src"]    # list of folders that contain the packages (["."] by default)
include = ["src"]  # package names should match these glob patterns (["*"] by default)
exclude = []         # exclude packages matching these glob patterns (empty by default)
namespaces = false   # to disable scanning PEP 420 namespaces (true by default)